@@ -1,3 +1,11 @@
+2008-05-31  Jens-Michael Hoffmann  <jensmh@gmx.de>
+
+    * src/lib/geodata/data/GeoDataPoint.cpp:
+
+    - Initialise base class object in copy constructor.
+    - Remove empty destructor of GeoDataPointPrivate.
+    - Add FIXME for assignment operator.
+
 2008-05-30  Jens-Michael Hoffmann  <jensmh@gmx.de>
 
     * src/lib/geodata/data/GeoDataObject.h:
